--- a/fly/fly.html
+++ b/fly/fly.html
@@ -19,16 +19,19 @@
         <button onclick="topView()">头顶视角</button>
         <button onclick="sideView()">侧面视角</button>
         <button onclick="aircraftView()">跟随视角</button>
+        <button onclick="flyBack()">向后飞行</button>
+        <button onclick="flyForward()">向前飞行</button>
     </div>
     <script>
-        var viewer = new Cesium.Viewer("cesium_container");
+        var mViewer = new Cesium.Viewer("cesium_container");
+        var mFlySpeed = 10;
         /**
          * 初始化飞行数据
          **/
         function initFly()
         {
             //设置初始位置
-            viewer.camera.flyTo({
+            mViewer.camera.flyTo({
                 destination :  Cesium.Cartesian3.fromDegrees(116.538799 , 39.9948 , 100000),
                 orientation: {
                     heading : Cesium.Math.toRadians(20.0), // 方向
@@ -54,15 +57,15 @@
                 // 结束时间
             let stop = Cesium.JulianDate.addSeconds(start, 720,new Cesium.JulianDate());
                 // 设置始时钟始时间
-            viewer.clock.startTime = start.clone();
+            mViewer.clock.startTime = start.clone();
                 // 设置时钟当前时间
-            viewer.clock.currentTime = start.clone();
+            mViewer.clock.currentTime = start.clone();
                 // 设置始终停止时间
-            viewer.clock.stopTime  = stop.clone();
+            mViewer.clock.stopTime  = stop.clone();
             // 时间速率，数字越大时间过的越快
-            viewer.clock.multiplier = 10;
+            mViewer.clock.multiplier = mFlySpeed;
                 // 循环执行
-            viewer.clock.clockRange = Cesium.ClockRange.LOOP_STOP;
+            mViewer.clock.clockRange = Cesium.ClockRange.LOOP_STOP;
             for(let j=0; j<data.length; j++)
             {
                 let property = new Cesium.SampledPositionProperty();
@@ -73,7 +76,7 @@
                     property.addSample(time, position);
                 }
                 // 添加模型
-                viewer.entities.add({
+                mViewer.entities.add({
                     id: "fly",
                     // 和时间轴关联
                     availability : new Cesium.TimeIntervalCollection([new Cesium.TimeInterval({
@@ -105,29 +108,41 @@
 
         function startFly()
         {
-            viewer.clock.shouldAnimate = true;
+            mViewer.clock.shouldAnimate = true;
         }
 
         function pauseFly()
         {
-            viewer.clock.shouldAnimate = false;
+            mViewer.clock.shouldAnimate = false;
         }
 
         function topView()
         {
-            viewer.trackedEntity = undefined;
-            viewer.zoomTo(viewer.entities, new Cesium.HeadingPitchRange(0, Cesium.Math.toRadians(-90)));
+            mViewer.trackedEntity = undefined;
+            mViewer.zoomTo(mViewer.entities, new Cesium.HeadingPitchRange(0, Cesium.Math.toRadians(-90)));
         }
 
         function sideView()
         {
-            viewer.trackedEntity = undefined;
-            viewer.zoomTo(viewer.entities, new Cesium.HeadingPitchRange(Cesium.Math.toRadians(-90), Cesium.Math.toRadians(-15), 7500));
+            mViewer.trackedEntity = undefined;
+            mViewer.zoomTo(mViewer.entities, new Cesium.HeadingPitchRange(Cesium.Math.toRadians(-90), Cesium.Math.toRadians(-15), 7500));
         }
 
         function aircraftView()
         {
-            viewer.trackedEntity = viewer.entities.getById("fly");
+            mViewer.trackedEntity = mViewer.entities.getById("fly");
+        }
+
+        function flyBack()
+        {
+            mFlySpeed = -10;
+            mViewer.clock.multiplier = mFlySpeed;
+        }
+
+        function flyForward()
+        {
+            mFlySpeed = 10;
+            mViewer.clock.multiplier = mFlySpeed;
         }
     </script>
 </body>
