--- a/fly/fly.html
+++ b/fly/fly.html
@@ -12,15 +12,16 @@
 <body>
     <div id = "cesium_container" style="width:100%;height:100%;">
     </div>
-    <div id="fly_operator_container" style="width:300px;height:300px;position:absolute;z-index:9;top:10px;left:10px;">
+    <div id="fly_operator_container" style="position:absolute;z-index:9;top:10px;left:10px;">
         <button onclick="initFly()">初始化</button>
         <button onclick="startFly()">开始飞行</button>
-        <button onclick="pauseFly()">停止飞行</button>
+        <button onclick="pauseFly()">暂停飞行</button>
         <button onclick="topView()">头顶视角</button>
         <button onclick="sideView()">侧面视角</button>
         <button onclick="aircraftView()">跟随视角</button>
         <button onclick="flyBack()">向后飞行</button>
         <button onclick="flyForward()">向前飞行</button>
+        <button onclick="stopFly()">停止飞行</button>
     </div>
     <script>
         var mViewer = new Cesium.Viewer("cesium_container");
@@ -106,43 +107,75 @@
             }
         }
 
+        /**
+         * 开始飞行
+         **/
         function startFly()
         {
             mViewer.clock.shouldAnimate = true;
         }
 
+        /**
+         * 暂停飞行
+         **/
         function pauseFly()
         {
             mViewer.clock.shouldAnimate = false;
         }
 
+        /**
+         * 顶部视图
+         **/
         function topView()
         {
             mViewer.trackedEntity = undefined;
             mViewer.zoomTo(mViewer.entities, new Cesium.HeadingPitchRange(0, Cesium.Math.toRadians(-90)));
         }
 
+        /**
+         * 侧面视图
+         **/
         function sideView()
         {
             mViewer.trackedEntity = undefined;
             mViewer.zoomTo(mViewer.entities, new Cesium.HeadingPitchRange(Cesium.Math.toRadians(-90), Cesium.Math.toRadians(-15), 7500));
         }
 
+        /**
+         * 跟随视图
+         **/
         function aircraftView()
         {
             mViewer.trackedEntity = mViewer.entities.getById("fly");
         }
 
+        /**
+         * 向后飞行
+         **/
         function flyBack()
         {
             mFlySpeed = -10;
             mViewer.clock.multiplier = mFlySpeed;
         }
 
+        /**
+         * 向前飞行
+         **/
         function flyForward()
         {
             mFlySpeed = 10;
             mViewer.clock.multiplier = mFlySpeed;
+        }
+
+        function stopFly()
+        {
+            mViewer.trackedEntity = undefined;
+            var start = Cesium.JulianDate.fromDate(new Date());
+            viewer.clock.startTime = start.clone();
+            var stop = Cesium.JulianDate.addSeconds(start, 300000000, new Cesium.JulianDate());
+            viewer.clock.stopTime = stop.clone();
+            layer.closeAll();
+            viewer.entities.remove(entityee);
         }
     </script>
 </body>
