添加飞行demo上传

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body style="margin:10px;">
     <a href ="base/load_cesium.html">加载地图</a>
     <br />
+    <a href ="base/load_cesium2.html">地图显示配置</a>
+    <br />
     <a href ="fly/fly.html">三维飞行</a>
 </body>
 </html>
