添加飞行demo上传

--- a/base/load_cesium.html
+++ b/base/load_cesium.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>三维飞行</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cesiumjs.org/releases/1.57/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="https://cesiumjs.org/releases/1.57/Build/Cesium/Cesium.js"></script>
@@ -13,7 +13,7 @@
     </div>
     <script>
         //cesium_container 对应容器div 的ID
-        var viewer = new Cesium.Viewer('cesium_container');
+        var mViewer = new Cesium.Viewer('cesium_container');
     </script>
 </body>
 </html>
