--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cesium Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 <body style="margin:10px;">
     <a href ="base/load_cesium.html">加载地图</a>
     <br />
-    <a href ="base/load_cesium2.html">地图显示配置</a>
+    <a href ="base/load_cesium2.html">地图控件动态显示</a>
+    <br />
+    <a href ="base/load_cesium3.html">初始化去除地图所有控件</a>
+    <br />
+    <a href ="model/show.html">展示基础模型</a>
     <br />
     <a href ="fly/fly.html">三维飞行</a>
 </body>
