--- a/base/load_cesium2.html
+++ b/base/load_cesium2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>三维飞行</title>
+    <title>三维显示配置</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cesiumjs.org/releases/1.57/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="https://cesiumjs.org/releases/1.57/Build/Cesium/Cesium.js"></script>
