--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body style="margin:10px;">
     <a href ="base/load_cesium.html">加载地图</a>
     <br />
-    <a href ="base/load_cesium2.html">地图控件动态显示</a>
+    <a href ="base/load_cesium2.html">初始化去除地图所有控件</a>
     <br />
-    <a href ="base/load_cesium3.html">初始化去除地图所有控件</a>
+    <a href ="base/load_cesium3.html">地图控件动态显示</a>
+    <br />
+    <a href ="fly/fly.html">三维飞行</a>
     <br />
     <a href ="model/show.html">展示基础模型</a>
     <br />
-    <a href ="fly/fly.html">三维飞行</a>
+    <a href ="model/show_underline.html">展示地下模型</a>
 </body>
 </html>
