--- a/model/show.html
+++ b/model/show.html
@@ -11,16 +11,21 @@
 <body>
     <div id = "cesium_container" style="width:100%;height:100%;">
     <div style="position:absolute;z-index:9;top:20px;left:20px;">
-        <select id = "model_list" onchange="modelSelectChanged()">
-
-        </select>
+        <span style="color:white">模型选择：</span><select id = "model_list" onchange="modelSelectChanged()"></select>
+        <span style="color:white">拾取颜色：</span><input id = "model_color" type="color" onchange="modelColorSelect()"></input>
+        <span style="color:white">设置透明度</span><input type="range" min="0" max="1" value="1" step="0.05" id="model_alpha" onchange="modelAlphaSelect()"></input>
+        
+        <span style="color:white">拾取边框颜色：</span><input id = "model_border_color" type="color" onchange="modelBorderColorSelect()"></input>
+        <span style="color:white">边框粗细</span><input type="number" min="0" max="10" value="0"id="model_border_size" onchange="modelBorderSize()"></input>
     </div>
     </div>
     <script>
         //cesium_container 对应容器div 的ID
         var mViewer = new Cesium.Viewer('cesium_container',{shouldAnimate:true});
         //默认加载飞机模型
-        createModel('../assets/cesium/air_plan.gltf', 5000.0);
+        createModel('../assets/cesium/Cesium_Air.glb', 5000.0);
+        //当前选择模型
+        var mEntity;
         //初始话模型类型
         var modelSelectList = document.getElementById("model_list");
         modelSelectList.options[modelSelectList.options.length]=new Option("飞机",1);
@@ -39,7 +44,7 @@
             switch(Number(modelSelectList.value))
             {
                 case 1:
-                    createModel('../assets/cesium/air_plan.gltf', 5000.0);
+                    createModel('../assets/cesium/Cesium_Air.glb', 5000.0);
                     break;
                 case 2:
                     createModel('../assets/cesium/GroundVehicle.glb', 0);
@@ -62,6 +67,41 @@
         }
 
         /**
+         * 修改模型颜色
+         **/
+        function modelColorSelect()
+        {
+            mEntity.model.color = Cesium.Color.fromCssColorString(document.getElementById("model_color").value);
+        }
+
+        /**
+         * 设置透明度
+         **/
+        function modelAlphaSelect()
+        {
+            let color = mEntity.model.color.getValue();
+            color.alpha = Number(document.getElementById("model_alpha").value);
+            mEntity.model.color = color;
+        }
+
+        /**
+         * 设置边框颜色
+         **/
+         function modelBorderColorSelect()
+        {
+            mEntity.model.silhouetteColor = Cesium.Color.fromCssColorString(document.getElementById("model_border_color").value);
+        }
+
+        /**
+         * 设置边框大小
+         **/
+        function modelBorderSize()
+        {
+            let size = parseFloat(document.getElementById("model_border_size").value);
+            mEntity.model.silhouetteSize._value = parseFloat(size);
+        }
+        
+        /**
          * 创建模型
          **/
         function createModel(url, height)
@@ -73,17 +113,20 @@
             var roll = 0;
             var hpr = new Cesium.HeadingPitchRoll(heading, pitch, roll);
             var orientation = Cesium.Transforms.headingPitchRollQuaternion(position, hpr);
-            var entity = mViewer.entities.add({
+
+            mEntity = mViewer.entities.add({
                 name : url,
                 position : position,
                 orientation : orientation,
                 model : {
                     uri : url,
                     minimumPixelSize : 128,
-                    maximumScale : 20000
+                    maximumScale : 20000,
+                    silhouetteColor: Cesium.Color.fromAlpha(Cesium.Color.BLACK, 1.0),
+                    silhouetteSize : 0
                 }
             });
-            mViewer.trackedEntity = entity;
+            mViewer.trackedEntity = mEntity;
         }
     </script>
 </body>
