--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <a href ="model/show.html">展示基础模型</a>
     <br />
     <a href ="model/show_underline.html">展示地下模型</a>
+    <br />
+    <a href ="datasource/topojson.html">展示topojson数据</a>
 </body>
 </html>
