--- a/datasource/topojson.html
+++ b/datasource/topojson.html
@@ -12,19 +12,85 @@
     <div id = "cesium_container" style="width:100%;height:100%;">
     </div>
     <div id="fly_operator_container" style="position:absolute;z-index:9;top:10px;left:10px;">
-        <button onclick="initDefaultStyle()">默认样式</button>
+        <button onclick="initDefaultStyle()">加载数据</button>
+        <span style="color:white">拾取边框颜色：</span><input id = "border_color" type="color" onchange="borderColorSelect()"></input>
+        <span style="color:white">拾取填充颜色：</span><input id = "fill_color" type="color" onchange="fillColorSelect()"></input>
+        <span style="color:white">填充透明度</span><input type="range" min="0" max="1" value="1" step="0.05" id="fill_alpha" onchange="fillAlphaSelect()"></input>
+        <!-- <span style="color:white">边框粗细</span><input type="number" min="0" max="15" value="1" id="border_size" onchange="borderSize()"></input> -->
     </div>
     <script>
         //cesium_container 对应容器div 的ID
         var mViewer = new Cesium.Viewer('cesium_container');
+
+        mViewer.camera.flyTo({
+            destination :  Cesium.Cartesian3.fromDegrees(116.2345 , 39.34555 , 10000000),
+        });
+
+
         /**
          * 加载默认样式
          */
         function initDefaultStyle()
         {
             mViewer.dataSources.removeAll();
-            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson'));
-            mViewer.zoomTo(Cesium.Cartesian3.fromDegrees(116.2345,39.34555));
+            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson',{
+                stroke: Cesium.Color.HOTPINK,
+                fill: Cesium.Color.PINK.withAlpha(0.5),
+                strokeWidth: 10
+            }));
+        }
+
+        /**
+         * 修改边框颜色
+         **/
+        function borderColorSelect()
+        {
+            mViewer.dataSources.removeAll();
+            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson', {
+                stroke: Cesium.Color.fromCssColorString(document.getElementById("border_color").value),
+                fill: Cesium.Color.fromCssColorString(document.getElementById("fill_color").value).withAlpha(Number(document.getElementById("fill_alpha").value)),
+                strokeWidth: Number(document.getElementById("border_size").value)
+            }));
+        }
+
+        /**
+         * 修改填充颜色
+         **/
+        function fillColorSelect()
+        {
+            mViewer.dataSources.removeAll();
+            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson', {
+                stroke: Cesium.Color.fromCssColorString(document.getElementById("border_color").value),
+                fill: Cesium.Color.fromCssColorString(document.getElementById("fill_color").value).withAlpha(Number(document.getElementById("fill_alpha").value)),
+                strokeWidth: Number(document.getElementById("border_size").value)
+            }));
+        }
+
+        /**
+         * 修改填充透明度
+         **/
+         function fillAlphaSelect()
+        {
+            mViewer.dataSources.removeAll();
+            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson', {
+                stroke: Cesium.Color.fromCssColorString(document.getElementById("border_color").value),
+                fill: Cesium.Color.fromCssColorString(document.getElementById("fill_color").value).withAlpha(Number(document.getElementById("fill_alpha").value)),
+                strokeWidth: Number(document.getElementById("border_size").value)
+            }));
+        }
+
+
+        /**
+         * 修改边框粗细
+         **/
+        function borderSize()
+        {
+            mViewer.dataSources.removeAll();
+            mViewer.dataSources.add(Cesium.GeoJsonDataSource.load('../assets/cesium/china.topojson', {
+                stroke: Cesium.Color.fromCssColorString(document.getElementById("border_color").value),
+                fill: Cesium.Color.fromCssColorString(document.getElementById("fill_color").value).withAlpha(Number(document.getElementById("fill_alpha").value)),
+                strokeWidth: Number(document.getElementById("border_size").value)
+            }));
         }
     </script>
 </body>
