--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href ="model/show_underline.html">展示地下模型</a>
     <br />
     <a href ="datasource/topojson.html">展示topojson数据</a>
+    <br />
+    <a href ="datasource/geojson.html">展示geojson数据</a>
 </body>
 </html>
