--- a/fly/fly.html
+++ b/fly/fly.html
@@ -22,9 +22,46 @@
         <button onclick="flyForward()">向前飞行</button>
         <button onclick="customFly()">自定义路线</button>
         <button onclick="stopFly(true)">停止飞行</button>
+        <button onclick="flyByKeyword()">上下左右键盘控制飞行</button>
+        <div style="color:white;display:none" class="flyByKeywordContainer">
+            <table class="infoPanel">
+                <tbody>
+                    <tr>
+                        <td>左右: <span id="heading"></span>°</td>
+                    </tr>
+                    <tr>
+                        <td>← 左/→ 右</td>
+                    </tr>
+                    <tr>
+                        <td>上下: <span id="pitch"></span>°</td>
+                    </tr>
+                    <tr>
+                        <td>↑ 上/↓ 下</td>
+                    </tr>
+                    <tr>
+                        <td>倾斜: <span id="roll"></span>°</td>
+                    </tr>
+                    <tr>
+                        <td>← + shift 左/→ + shift 右</td>
+                    </tr>
+                    <tr>
+                        <td>速度: <span id="speed"></span>m/s</td>
+                    </tr>
+                    <tr>
+                        <td>↑ + shift  加速/↓ + shift 减速</td>
+                    </tr>
+                    <tr>
+                        <td>跟随飞机
+                            <input id="fromBehind" type="checkbox">
+                        </td>
+                    </tr>
+    
+                </tbody>
+            </table>
+        </div>
     </div>
     <script>
-        var mViewer = new Cesium.Viewer("cesium_container");
+        var mViewer = new Cesium.Viewer("cesium_container",{shouldAnimate:true});
         var mFlySpeed = 10;
         var mFlyPath = [];
         /**
@@ -280,6 +317,173 @@
             mViewer.entities.removeAll();
             if(clearData)
                 mFlyPath = [];
+        }
+
+        /**
+         * 键盘控制飞行
+         **/
+        function flyByKeyword()
+        {
+            mViewer.entities.removeAll();
+            mViewer.scene.primitives.removeAll();
+            let display = document.getElementsByClassName("flyByKeywordContainer")[0].style.display;
+            if(display == 'block')
+                document.getElementsByClassName("flyByKeywordContainer")[0].style.display="none";
+            else
+                document.getElementsByClassName("flyByKeywordContainer")[0].style.display="block";
+
+            var canvas = mViewer.canvas;
+            canvas.setAttribute('tabindex', '0'); // needed to put focus on the canvas
+            canvas.addEventListener('click', function() {
+                canvas.focus();
+            });
+            canvas.focus();
+
+            var scene = mViewer.scene;
+
+            var pathPosition = new Cesium.SampledPositionProperty();
+            var entityPath = mViewer.entities.add({
+                position : pathPosition,
+                name : 'path',
+                path : {
+                    show : true,
+                    leadTime : 0,
+                    trailTime : 60,
+                    width : 10,
+                    resolution : 1,
+                    material : new Cesium.PolylineGlowMaterialProperty({
+                        glowPower : 0.3,
+                        taperPower : 0.3,
+                        color : Cesium.Color.PALEGOLDENROD
+                    })
+                }
+            });
+
+            var camera = mViewer.camera;
+            var controller = scene.screenSpaceCameraController;
+            var r = 0;
+            var center = new Cesium.Cartesian3();
+
+            var hpRoll = new Cesium.HeadingPitchRoll();
+            var hpRange = new Cesium.HeadingPitchRange();
+            var speed = 10;
+            var deltaRadians = Cesium.Math.toRadians(3.0);
+
+            var position = Cesium.Cartesian3.fromDegrees(116.0744619, 39.0503706, 5000.0);
+            var speedVector = new Cesium.Cartesian3();
+            var fixedFrameTransform = Cesium.Transforms.localFrameToFixedFrameGenerator('north', 'west');
+
+            var planePrimitive = scene.primitives.add(Cesium.Model.fromGltf({
+                url : '../assets/cesium/Cesium_Air.glb',
+                modelMatrix : Cesium.Transforms.headingPitchRollToFixedFrame(position, hpRoll, Cesium.Ellipsoid.WGS84, fixedFrameTransform),
+                minimumPixelSize : 128
+            }));
+
+            planePrimitive.readyPromise.then(function(model) {
+                // Play and loop all animations at half-speed
+                model.activeAnimations.addAll({
+                    multiplier : 0.5,
+                    loop : Cesium.ModelAnimationLoop.REPEAT
+                });
+
+                // Zoom to model
+                r = 2.0 * Math.max(model.boundingSphere.radius, camera.frustum.near);
+                controller.minimumZoomDistance = r * 0.5;
+                Cesium.Matrix4.multiplyByPoint(model.modelMatrix, model.boundingSphere.center, center);
+                var heading = Cesium.Math.toRadians(230.0);
+                var pitch = Cesium.Math.toRadians(-20.0);
+                hpRange.heading = heading;
+                hpRange.pitch = pitch;
+                hpRange.range = r * 50.0;
+                camera.lookAt(center, hpRange);
+            });
+
+            document.addEventListener('keydown', function(e) {
+                switch (e.keyCode) {
+                    case 40:
+                        if (e.shiftKey) {
+                            // speed down
+                            speed = Math.max(--speed, 1);
+                        } else {
+                            // pitch down
+                            hpRoll.pitch -= deltaRadians;
+                            if (hpRoll.pitch < -Cesium.Math.TWO_PI) {
+                                hpRoll.pitch += Cesium.Math.TWO_PI;
+                            }
+                        }
+                        break;
+                    case 38:
+                        if (e.shiftKey) {
+                            // speed up
+                            speed = Math.min(++speed, 100);
+                        } else {
+                            // pitch up
+                            hpRoll.pitch += deltaRadians;
+                            if (hpRoll.pitch > Cesium.Math.TWO_PI) {
+                                hpRoll.pitch -= Cesium.Math.TWO_PI;
+                            }
+                        }
+                        break;
+                    case 39:
+                        if (e.shiftKey) {
+                            // roll right
+                            hpRoll.roll += deltaRadians;
+                            if (hpRoll.roll > Cesium.Math.TWO_PI) {
+                                hpRoll.roll -= Cesium.Math.TWO_PI;
+                            }
+                        } else {
+                            // turn right
+                            hpRoll.heading += deltaRadians;
+                            if (hpRoll.heading > Cesium.Math.TWO_PI) {
+                                hpRoll.heading -= Cesium.Math.TWO_PI;
+                            }
+                        }
+                        break;
+                    case 37:
+                        if (e.shiftKey) {
+                            // roll left until
+                            hpRoll.roll -= deltaRadians;
+                            if (hpRoll.roll < 0.0) {
+                                hpRoll.roll += Cesium.Math.TWO_PI;
+                            }
+                        } else {
+                            // turn left
+                            hpRoll.heading -= deltaRadians;
+                            if (hpRoll.heading < 0.0) {
+                                hpRoll.heading += Cesium.Math.TWO_PI;
+                            }
+                        }
+                        break;
+                    default:
+                }
+            });
+
+            var headingSpan = document.getElementById('heading');
+            var pitchSpan = document.getElementById('pitch');
+            var rollSpan = document.getElementById('roll');
+            var speedSpan = document.getElementById('speed');
+            var fromBehind = document.getElementById('fromBehind');
+
+            mViewer.scene.preUpdate.addEventListener(function(scene, time) {
+                speedVector = Cesium.Cartesian3.multiplyByScalar(Cesium.Cartesian3.UNIT_X, speed / 10, speedVector);
+                position = Cesium.Matrix4.multiplyByPoint(planePrimitive.modelMatrix, speedVector, position);
+                pathPosition.addSample(Cesium.JulianDate.now(), position);
+                Cesium.Transforms.headingPitchRollToFixedFrame(position, hpRoll, Cesium.Ellipsoid.WGS84, fixedFrameTransform, planePrimitive.modelMatrix);
+                if (fromBehind.checked) {
+                    // Zoom to model
+                    Cesium.Matrix4.multiplyByPoint(planePrimitive.modelMatrix, planePrimitive.boundingSphere.center, center);
+                    hpRange.heading = hpRoll.heading;
+                    hpRange.pitch = hpRoll.pitch;
+                    camera.lookAt(center, hpRange);
+                }
+            });
+
+            mViewer.scene.preRender.addEventListener(function(scene, time) {
+                headingSpan.innerHTML = Cesium.Math.toDegrees(hpRoll.heading).toFixed(1);
+                pitchSpan.innerHTML = Cesium.Math.toDegrees(hpRoll.pitch).toFixed(1);
+                rollSpan.innerHTML = Cesium.Math.toDegrees(hpRoll.roll).toFixed(1);
+                speedSpan.innerHTML = speed.toFixed(1);
+            });
         }
     </script>
 </body>
