添加3d titles 数据加载方式

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     <a href ="datasource/topojson.html">展示topojson数据</a>
     <br />
     <a href ="datasource/geojson.html">展示geojson数据</a>
+    <br />
+    <a href ="datasource/3dtities.html">展示3dtities数据</a>
 </body>
 </html>
