添加模型上传

--- a/datasource/3dtities.html
+++ b/datasource/3dtities.html
@@ -28,7 +28,7 @@
             endTransform: Cesium.Matrix4.IDENTITY
         });
 
-        var tileset = new Cesium.Cesium3DTileset({ url: "http://47.97.109.182:6101/huangpujiang/tileset.json" });
+        var tileset = new Cesium.Cesium3DTileset({ url: "../assets/cesium/3dtities/huangpujiang/tileset.json" });
         mViewer.scene.primitives.add(tileset);
 
         mViewer.trackedEntity = undefined;
