添加忽略文件

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <br />
     <a href ="datasource/geojson.html">展示geojson数据</a>
     <br />
-    <a href ="datasource/3dtities.html">展示3dtities数据</a>
+    <a href ="datasource/3dtiles.html">展示3dtiles数据</a>
 </body>
 </html>
