--- a/base/load_cesium2.html
+++ b/base/load_cesium2.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cesiumjs.org/releases/1.57/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="https://cesiumjs.org/releases/1.57/Build/Cesium/Cesium.js"></script>
+    <style>
+            html,body
+            {
+                width:100%;
+                height:100%;
+            }
+        </style>
 </head>
 <body style="margin: 0px">
     <div id = "cesium_container" style="width:100%;height:100%;margin: 0px">
