--- a/datasource/custom_3dtities.html
+++ b/datasource/custom_3dtities.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cesiumjs.org/releases/1.58/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="https://cesiumjs.org/releases/1.58/Build/Cesium/Cesium.js"></script>
+    <style>
+            html,body
+            {
+                width:100%;
+                height:100%;
+                padding:0;
+                margin:0
+            }
+        </style>
 </head>
 <body>
     <div id = "cesium_container" style="width:100%;height:100%;">
